# bda_tp_final

./: .gitignore  README.md  main.ipynb  pyproject.toml
backend/: chat_data.db  pyproject.toml  requirements.txt  server.py
backend/routes/: embeddings.py  messages.py
backend/services/: database.py  generate_embedding.py  language_processing.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatDashboard.vue  ChatUpload.vue  ClusterView.vue  MessageList.vue  SentimentChart.vue  TimelineChart.vue
frontend/src/services/: api.js
