[project]
name = "tp-final"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "scipy (>=1.16.2,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "datasets (>=4.2.0,<5.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
]
packages = [{ include = "tp_final" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.1,<8.0.0)"
]
